src/App.scss
// Hero section
.vkw-hero {
  background-color: #0D0000;
  padding: 80px 0 80px 0; 
  position: relative;
  overflow: hidden;
  &__title {
    position: relative;
    z-index: 1;
    font-family: 'Playfair Display', serif;
    font-weight: 700;
    font-size: 36px;
    line-height: 1.2;
    color: #F26D91;
    text-align: center;
    margin: 0 auto 20px auto;
    @media (max-width: 575px) {
      font-size: 24px;
    }
  }
  &__container {
    max-width: 800px;
    margin: 0 auto;
    padding: 0 16px;
  }
  &__submit {
    position: relative;
    z-index: 1;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 20px;
    display: block;
    width: 100%;
    background-color: #F26D91;
    padding: 8px;
    border: none;
    cursor: pointer;
    color: #0D0000;
    &:hover {
      background-color: darken(#F26D91, 10%);
    }
    &:disabled {
      opacity: 0.65;
      cursor: not-allowed;
      background-color: #F26D91;
    }
    &-spinner {
      display: inline-block;
      width: 16px;
      height: 16px;
      border: 0.25em solid currentcolor;
      border-right-color: transparent;
      border-radius: 50%;
      vertical-align: -0.125em;
      animation: 0.75s linear infinite spinner-border;
      margin-inline-end: 4px;
    }
  }
  @media (max-width: 575px) {
    padding: 40px 0 40px 0; 
  }
}

// Flower
.vkw-flower {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  z-index: 0;
  width: 100%;
  bottom: -200px;
  @media (max-width: 1024px) {
    width: 150%;
  }
  @media (max-width: 767px) {
    width: 140%;
    bottom: -100px;
  }
}

// Dropzone
.vkw-dropzone {
  position: relative;
  z-index: 1;
  max-width: 387px;
  margin: 0 auto;
  &__container {
    max-width: 800px;
    margin: 0 auto;
    padding: 0 16px;
  }
  &__label {
    display: block;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 16px;
    margin-bottom: 8px;
    color: #e8eaed;
    @media (max-width: 575px) {
      font-size: 14px;
    }
  }
  &__area {
    position: relative;
  }
  &__input {
    border: 2px dashed #e8eaed;
    position: relative;
    z-index: 1;
    cursor: pointer;
    display: block;
    min-height: 96px;
    width: 100%;
    color: transparent;
    &:hover {
      background-color: rgba(255, 255, 255, 0.2);
    }
    &:disabled {
      cursor: not-allowed;
      background-color: rgba(255, 255, 255, 0);
    }
    &::file-selector-button {
      display: none;
    }
  }
  &__icon {
    position: absolute;
    top: 50%;
    inset-inline-start: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    z-index: 0;
    > svg {
      fill: #e8eaed;
    }
    > div {
      color: #e8eaed;
      font-family: 'Poppins', sans-serif;
      font-weight: 400;
      font-size: 12px;
    }
  }
  @media (max-width: 575px) {
    max-width: 258px;
  }
}

// Previews
.vkw-previews {
  position: relative;
  padding: 40px 0 40px 0;
  background-color: #ECE2D0;
  &__title {
    display: block;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-size: 20px;
    margin: 0;
    color: #0D0000;
  }
  &__container {
    max-width: 1320px;
    margin: 0 auto;
    padding: 0 16px;
    position: relative;
  }
  &__grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 16px;
    margin-bottom: 16px;
    .vkw-preview:nth-child(1),
    .vkw-preview:nth-child(2),
    .vkw-preview:nth-child(3),
    .vkw-preview:nth-child(4) {
      display: block;
    }
    @media (max-width: 767px) {
      grid-template-columns: repeat(2, 1fr);
    }
  }
  &__clear {
    border: none;
    display: block;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-size: 20px;
    margin: 0;
    color: #0D0000;
    background-color: transparent;
    text-decoration: underline;
    padding: 0;
    line-height: 1.15;
    cursor: pointer;
    &:hover {
      text-decoration: none;
    }
    &:disabled {
      cursor: not-allowed;
      text-decoration: underline;
    }
  }
}

// Preview
.vkw-preview {
  position: relative;
  z-index: 2;
  display: none;
  &__image {
    display: block;
    aspect-ratio: 1 / 1;
    width: 100%;
    object-fit: cover;
    margin-bottom: 16px;
    z-index: 0;
  }
  &__input {
    padding: 4px;
    display: block;
    width: 100%;
    border: 1px solid #dee2e6;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 12px;
    color: #0D0000;
    &:disabled {
      cursor: not-allowed;
    }
  }
}

// Pagination
.vkw-pagination {
  margin-top: 40px;
  &__container {
    max-width: 1320px;
    margin: 0 auto;
    padding: 0 16px;
    display: flex;
    justify-content: space-between;
  }
  &__numbers {
    display: flex;
    align-items: center;
    button {
      @media (max-width: 767px) {
        height: 28px;
        width: 28px;
      }
      @media (max-width: 400px) {
        display: none;
      }
    }
  }
  &__fraction {
    display: none;
    color: #0D0000;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    @media (max-width: 400px) {
      display: inline-block;
    }
  }
  &__control {
    background-color: white;
    border: none;
    border-radius: 0;
    color: #0D0000;
    margin: 0 4px;
    padding: 0;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    height: 44px;
    width: 44px;
    cursor: pointer;
    &:hover {
      background-color: darken(white, 5%);
    }
    &_ellipsis {
      color: #0D0000;
      cursor: default;
      &:hover {
        background-color: transparent;
      }
    }
    &_active {
      color: #F26D91;
    }
  }
  &__arrow {
    border: 1px solid #0D0000;
    fill: #0D0000;
    margin: 0;
    transition: opacity 200ms ease-out;
    &:disabled {
      opacity: 0;
    }
    &_prev {
      margin-inline-end: 4px;
    }
    &_next {
      margin-inline-start: 4px;
    }
  }
}

// Gallery
.vkw-gallery {
  padding: 32px 0;
  &__container {
    max-width: 1320px;
    margin: 0 auto;
    padding: 0 16px;
  }
}

// Card
.vkw-card {
  &__image {
    display: none;
    width: 100%;
    height: auto;
    &.loaded {
      display: block;
    }
  }
  &__caption {
    margin-top: 8px;
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
    font-size: 12px;
    line-height: 1.5;
  }
}

// Copyright
.vkw-copyright {
  font-family: 'Poppins', sans-serif;
  font-weight: 300;
  font-size: 12px;
  line-height: 1.5;
  text-align: center;
  margin-bottom: 16px;
  margin-top: 60px;
  color: #0D0000;
  a {
    text-decoration: underline;
    color: #0D0000;
    &:hover {
      text-decoration: none;
    }
  }
}

.vkw-back-to-top-button {
  z-index: 1000;
  display: none;
  position: fixed;
  bottom: 16px;
  right: 16px;
  background-color: #F26D91;
  fill: #0D0000;
  border: none;
  padding: 0;
  height: 44px;
  width: 44px;
  cursor: pointer;
  &:hover {
    background-color: darken(#F26D91, 10%);
  }
  &.visible {
    display: block;
  }
}

@keyframes spinner-border {
  100% {
    transform: rotate(360deg);
  }
}

